# cpp-template

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp  version.md
cmake/: env.cmake
cmake/modules/: Findfmt.cmake
cmake_script/: env.cmake
cv/: CMakeLists.txt  cv.cmake  cv.cpp  cv.h
cv/include/: CMakeProject.h
cv/src/: CMakeProject.cpp
doc/: cmake.md  conan.md  cpp_version.md  gcc11_build.sh  grpc.md
mathlib/: CMakeLists.txt
mathlib/include/: mathlib.h
mathlib/src/: mathlib.cpp
media/: CMakeLists.txt
media/src/: media.cpp
syntax/: io.cpp  memory.cpp  network.cpp  thread.cpp
util/: CMakeLists.txt
util/math/: math.hpp
